--- a/src/app/favorite/favorite.component.html
+++ b/src/app/favorite/favorite.component.html
@@ -1,3 +1,7 @@
+ <!-- 3ª forma de añadir un estilo, en el html. es la forma con mas prioidad-->
+<style>                            
+
+</style>
 <span 
     class="fa"
     [class.fa-star]="isFavorite"
