--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 <h1>Angular</h1>
 
 <!-- <courses></courses>-->
-<app-favorite [is-favorite]="post.isFavorite" (change)="onFavoriteChanged($event)"></app-favorite>          <!-- is-favorite es input, change es output -->
+<!-- <app-favorite [is-favorite]="post.isFavorite" (change)="onFavoriteChanged($event)"></app-favorite>   -->       <!-- is-favorite es input, change es output -->
 
 <app-directive></app-directive>
+
+
