--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
 <!-- <courses></courses>-->
 <!-- <app-favorite [is-favorite]="post.isFavorite" (change)="onFavoriteChanged($event)"></app-favorite>   -->       <!-- is-favorite es input, change es output -->
 
-<app-directive></app-directive>
+<!--<app-directive></app-directive>-->
+<contact-form></contact-form>
 
 
