--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
 <!-- <app-favorite [is-favorite]="post.isFavorite" (change)="onFavoriteChanged($event)"></app-favorite>   -->       <!-- is-favorite es input, change es output -->
 
 <!--<app-directive></app-directive>
-<contact-form></contact-form>-->
-<signup-form></signup-form>
+<contact-form></contact-form>
+<signup-form></signup-form>-->
 
-
+<new-course-form-component></new-course-form-component>
