--- a/src/app/signup-form/signup-form.component.html
+++ b/src/app/signup-form/signup-form.component.html
@@ -1,23 +1,33 @@
-<form [formGroup]='formSignup'>
-  <div class="form-group">
-    <label for="">Username</label>
-    <input formControlName="username"
-           type="text"
-           id="username" 
-           class="form-control">
-      <div *ngIf="username.touched && username.invalid" class="alert alert-danger">
-        <div *ngIf="username.errors.required">Username is required</div>
-        <div *ngIf="username.errors.minlength">Username should be minimum {{username.errors.minlength.requiredLength}}</div>
-      </div>
-  </div>
-  <div class="form-group">
-      <label for="">Password</label>
-      <input  formControlName="password"
-              type="text" 
-              id="password" 
-              class="form-control">
+<form [formGroup]='formSignup' (ngSubmit)="login()" >
+  <div formGroupName="account" >
+    <div *ngIf="formSignup.errors" class="alert alert-danger">
+      The username or password is invalid.
+      <!-- aqui podrian ir divs individuales para mensajes de error individual-->
+    </div>
+    <div class="form-group">
+      <label for="">Username</label>
+      <input formControlName="username"
+            type="text"
+            id="username" 
+            class="form-control">
+        <div *ngIf="username.pending">Username checking...</div>      <!--Esto no funciona bien, creo que porque el async custom validator shouldBeUnique jamas llegó a funcionar sin errores-->
+        <div *ngIf="username.touched && username.invalid" class="alert alert-danger">
+          <div *ngIf="username.errors.required">Username is required</div>
+          <div *ngIf="username.errors.minlength">Username should be minimum {{username.errors.minlength.requiredLength}}</div>
+          <div *ngIf="username.errors.cannotContainSpace">Username cannot contain spaces</div>
+          <div *ngIf="username.errors.shouldBeUnique">Username mosh already taken</div>
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="">Password</label>
+        <input  formControlName="password"
+                type="text" 
+                id="password" 
+                class="form-control">
 
-  </div>
+    </div>
+</div>
   <button class="btn btn-primary" type="submit">Sign Up</button>
 </form>
+
 
