--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,7 @@
 
 <!--<app-directive></app-directive>
 <contact-form></contact-form>
-<signup-form></signup-form>-->
+<signup-form></signup-form>
 
-<new-course-form-component></new-course-form-component>
+<new-course-form-component></new-course-form-component>-->
+<app-posts></app-posts>
