115 handling expected errors

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,4 +8,4 @@
 <signup-form></signup-form>
 
 <new-course-form-component></new-course-form-component>-->
-<app-posts></app-posts>
+<app-posts-service></app-posts-service>
