--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,5 +7,6 @@
 <contact-form></contact-form>
 <signup-form></signup-form>
 
-<new-course-form-component></new-course-form-component>-->
-<app-posts-service></app-posts-service>
+<new-course-form-component></new-course-form-component>
+<app-posts-service></app-posts-service>-->
+<posts-optimistic></posts-optimistic>
