129 router link ii

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
-<h1>Angular</h1>
 
-<!-- <courses></courses>-->
+<!--
+  <h1>Angular</h1>
+  <courses></courses>-->
 <!-- <app-favorite [is-favorite]="post.isFavorite" (change)="onFavoriteChanged($event)"></app-favorite>   -->       <!-- is-favorite es input, change es output -->
 
 <!--<app-directive></app-directive>
@@ -8,5 +9,9 @@
 <signup-form></signup-form>
 
 <new-course-form-component></new-course-form-component>
-<app-posts-service></app-posts-service>-->
-<posts-optimistic></posts-optimistic>
+<app-posts-service></app-posts-service>
+<posts-optimistic></posts-optimistic>-->
+
+<navbar></navbar>
+<router-outlet></router-outlet> <!-- -->  <!-- Angular muestra el componente asociada con la ruta actual en esta directiva especial router-outlet -->
+                                  <!-- tecnicamente el componente se mostrará despues del router-outlet, no dentro. -->
