--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,5 @@
+home works!
+<!--
 <h1>Home Page</h1>
 <p *ngIf="authService.isLoggedIn()">
   Welcome {{ authService.currentUser.name }}
@@ -7,3 +9,4 @@
   <li *ngIf="!authService.isLoggedIn()"><a routerLink="/login">Login</a></li>
   <li *ngIf="authService.isLoggedIn()"><a (click)="authService.logout()">Logout</a></li>
 </ul>
+-->
