--- a/src/app/github-profile/github-profile.component.html
+++ b/src/app/github-profile/github-profile.component.html
@@ -1,5 +1,6 @@
 <p>
   github-profile works!
 </p>
+<button [routerLink]="['/followers',1234]" class="btn btn-primary">Next</button>
 
-<button class="btn btn-default" (click)="submit()">Submit</button>
+<!-- <button class="btn btn-default" (click)="submit()">Submit</button> -->
