--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,12 +1,14 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light">
   <div class="container-fluid">
     <div class="collapse navbar-collapse" >
       <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Followers</a>
+        <li class="nav-item" routerLinkActive="active current"> <!-- routerLinkActive aplicara los selectores css si ese link esta activo-->
+           <!-- In angular we don't use href for internal navigation, because the entire page has to be downloaded/re-rendered -->
+          <a class="nav-link" routerLink="/followers"
+                          [queryParams]="{ page:1, order: 'newest'}">Followers</a>    <!-- param opcionales: followers?page=1&order=newest -->
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Posts</a>
+        <li class="nav-item"  routerLinkActive="active current">
+          <a class="nav-link" routerLink="/posts">Posts</a>
         </li>
 
       </ul>
