--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light">
+<nav class="navbar navbar-expand-lg navbar-light" [style.backgroundColor]="backgroundColor">
   <div class="container-fluid">
     <div class="collapse navbar-collapse" >
       <ul class="navbar-nav">
